--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
 </head>
 
 <body>
-  <nav id="backgroundNav" class="navbar navbar-expand-lg navbar-dark navbar-fixed-top" style="padding:0px;">
-    <a class="navbar-brand" href="#">
-      <div class="logo">
-          <img class="logoimg" src="./img/logo.png" class="img-fluid">
-      </div>
-      NORMALMAGIA
-    </a>
+  <nav id="backgroundNav" class="navbar navbar-expand-lg navbar-dark navbar-fixed-top p-1">
+    <nav class="navbar m-1 ml-4">
+      <img src="./img/logo.png" width="30" height="30" class="d-inline" alt="">
+      <h4 class="m-2 ml-3" style="color:white; letter-spacing:3px; font-family: 'Times New Roman', Times, serif;">
+        NORMALMAGIA
+      </h4>
+    </nav>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#"></a>
-        </li>
-      </ul>
+    <div class="collapse navbar-collapse m-1">
+      <div class="d-flex justify-content-end">
+        <ul class="navbar-nav mr-4">
+          <li class="nav-item active">
+            <a class="nav-link  p-1 m-1" href="#">
+              <h5>Login</h5>
+            </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link  p-1 m-1" href="#">
+              <h5>Contactanos</h5>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
@@ -56,70 +56,81 @@
       <source src="" type='video/ogg; codecs="theora, vorbis"'>
     </video>
     <div class="ptext">
-      <span class="border">
+      <span class="border" style="font-family: 'Times New Roman', Times, serif;">
         NormalMagia
       </span>
     </div>
   </div>
 
   <section class="section section-light">
-    <h2>¿Qué es NORMALMAGIA?</h2>
-    <p>
-      Somos un colectivo, espacio y medio para contar historias, expresar y materializar arte
-      a través de herramientas audiovisuales y software.
-    </p>
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="./img/card2.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Música</h4>
+          <p class="card-text">Vivimos y trabajamos para que puedas obtener el contenido mas magnifico que alguna vez en
+            tu vida puedas ver, preparate para conocer lo inigualabale aquí.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./img/card1.JPEG" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Comerciales</h4>
+          <p class="card-text">Vivimos y trabajamos para que puedas obtener el contenido mas magnifico que alguna vez en
+            tu vida puedas ver, preparate para conocer lo inigualabale aquí.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="./img/card3.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Imagen</h4>
+          <p class="card-text">Vivimos y trabajamos para que puedas obtener el contenido mas magnifico que alguna vez en
+            tu vida puedas ver, preparate para conocer lo inigualabale aquí.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <div class="pimg2">
-    <div class="carouselDiv">
+    <div class="col-5 m-3 ml-4">
+      <h1>Capturamos la magia a través del lente y la hacemos tuya...</h1>
+    </div>
+    <div class="carouselDiv m-3 mr-4">
       <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="100">
+          <div class="carousel-item active" data-interval="200">
             <img src="./img/1.jpg" class="d-block w-100">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First</h5>
-              <p>Ecrire quelque chose</p>
+            <div class="carousel-caption">
             </div>
           </div>
-          <div class="carousel-item" data-interval="2000">
+          <div class="carousel-item" data-interval="200">
             <img src="./img/2.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second</h5>
-              <p>Ecrire quelque chose</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="200">
             <img src="./img/3.jpg" class="d-block w-100">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third</h5>
-              <p>Ecrire quelque chose</p>
-            </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+          <span class="sr-only">Anterior</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+          <span class="sr-only">Siguiente</span>
         </a>
       </div>
-
     </div>
-
   </div>
 
-  <section class="section section-dark">
+  <section class="section">
     <div>
-      <h2>Que hacemos...</h2>
+      <h2 class="m-4">Buscamos crear los sueños de miles de personas</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, laudantium, quibusdam? Nobis, delectus, commodi,
-        fugit amet tempora facere dolores nisi facilis consequatur, odio hic minima nostrum. Perferendis eos earum
-        praesentium, blanditiis sapiente labore aliquam ipsa architecto vitae. Minima soluta temporibus voluptates
-        inventore commodi cumque esse suscipit optio aliquam et, dolorem a cupiditate nihil fuga laboriosam fugiat
-        placeat
-        dignissimos! Unde eveniet placeat quisquam blanditiis voluptatem doloremque fugiat dolor repellendus ratione in.
+        Aqui tiene que ir un texto muy importante explicando lo que hacemos exactamente para que el cliente 
+        sepa que es lo que hacemos y no se quede perdido pensando que es lo que estos coles hacen porque nada 
+        mas veo fotos y ya.
       </p>
     </div>
 
@@ -131,6 +142,31 @@
         Texto
       </span>
     </div>
+
+    <div class="container">
+        <div>
+          <figure id="video_player">
+              <figcaption>
+                  <a href="http://thenewcode.com/assets/videos/glacier.mp4" class="currentvid">
+                    <img src="http://thenewcode.com/assets/images/vid-glacier.jpg" alt="Athabasca Glacier">
+                  </a>
+                  <a href="http://thenewcode.com/assets/videos/lake.mp4">
+                    <img src="http://thenewcode.com/assets/images/vid-lake.jpg" alt="Athabasca Lake">
+                  </a>
+                  <a href="http://thenewcode.com/assets/videos/mountain.mp4">
+                    <img src="http://thenewcode.com/assets/images/vid-mountain.jpg" alt="Mountain">
+                  </a>
+                </figcaption>
+            <div id="video_container">
+              <video controls poster="http://thenewcode.com/assets/images/vid-glacier.jpg" playsinline>
+                <source src="http://thenewcode.com/assets/videos/glacier.mp4" type="video/mp4">
+                <source src="http://thenewcode.com/assets/videos/glacier.webm" type="video/webm">
+              </video>
+            </div>
+          </figure>
+        </div>
+      </div>
+  
   </div>
 
   <section class="section section-dark">
@@ -139,38 +175,4 @@
       ............
     </p>
   </section>
-
-  <div class="pimg1">
-    <div id="listaVideos" class="ptext">
-      <span class="border">
-        LISTA DE REPRODUCCION
-      </span>
-    </div>
-
-    <div class="contenedor">
-      <div>
-        <figure id="video_player">
-          <div id="video_container">
-            <video controls poster="http://thenewcode.com/assets/images/vid-glacier.jpg" playsinline>
-              <source src="http://thenewcode.com/assets/videos/glacier.mp4" type="video/mp4">
-              <source src="http://thenewcode.com/assets/videos/glacier.webm" type="video/webm">
-            </video>
-          </div>
-          <figcaption>
-            <a href="http://thenewcode.com/assets/videos/glacier.mp4" class="currentvid">
-              <img src="http://thenewcode.com/assets/images/vid-glacier.jpg" alt="Athabasca Glacier">
-            </a>
-            <a href="http://thenewcode.com/assets/videos/lake.mp4">
-              <img src="http://thenewcode.com/assets/images/vid-lake.jpg" alt="Athabasca Lake">
-            </a>
-            <a href="http://thenewcode.com/assets/videos/mountain.mp4">
-              <img src="http://thenewcode.com/assets/images/vid-mountain.jpg" alt="Mountain">
-            </a>
-          </figcaption>
-        </figure>
-      </div>
-    </div>
-
-</body>
-
 </html>
